# rust-autogpt

./: .gitignore  Cargo.toml  README.md  cliff.toml
auto-gippity/: Cargo.toml
auto-gippity/src/: main.rs
auto-gippity/src/ai_functions/: aifunc_architect.rs  aifunc_backend.rs  aifunc_managing.rs  mod.rs
auto-gippity/src/apis/: call_request.rs  mod.rs
auto-gippity/src/helpers/: command_line.rs  general.rs  mod.rs
auto-gippity/src/models/: mod.rs
auto-gippity/src/models/agent_basic/: basic_agent.rs
auto-gippity/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
auto-gippity/src/models/agents_manager/: managing_agent.rs  mod.rs
auto-gippity/template/: code_template.rs
rust-autogpt/: Cargo.toml
