[package]
name = "auto-gippity"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_functions = "0.1.1"
anyhow = "1.0.86"
async-trait = "0.1.81"
crossterm = "0.28.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.39.2", features = ["full"] }
webbrowser = "1.0.1"
